# sat

./: README.md  pyproject.toml
scripts/: generate-catalogos.py
src/sat/catalogos/: __init__.py  aduana.py  clave_unidad.py  exportacion.py  forma_pago.py  impuesto.py  meses.py  metodo_pago.py  moneda.py  objeto_imp.py  pais.py  peridiocidad.py  regimen_fiscal.py  tipo_de_comprobante.py  tipo_factor.py  tipo_relacion.py  uso_cfdi.py
tests/: test_imports.py
