[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sat"
version = "0.1.0"
authors = [
  { name = "Isaac Sánchez", email = "isaac@elrincondelsanchez.com" }
]
description = "Paquete Python que contiene catálogos del SAT como módulos StrEnum para una fácil integración de datos fiscales."
readme = "README.md"
license = "LGPL-3.0"
license-files = [
  "LICENSE",
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "astor>=0.8.1",
    "coverage>=7.7.0",
    "mypy>=1.15.0",
    "openpyxl>=3.1.5",
    "pytest>=8.3.5",
    "ruff>=0.11.1",
]

[tool.pytest.ini_options]
addopts = [
  "-vv",
    "--strict-markers",
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
